--- a/doc/TP0doc.tex
+++ b/doc/TP0doc.tex
@@ -35,9 +35,8 @@
   O trabalho está composto das seguintes seções:\\\\
   \begin{itemize}
     \item A seção 2 discute detalhes de implementação e da modelagem do problema.
-    \item A seção 3 traz os testes realizados para verificar a solução do trabalho, bem como a saída gerada
-    \item A seção 4 apresenta uma breve conclusão sobre o trabalho.
-    \item E por fim a seção 5 traz as referências bibliográficas.
+    \item A seção 3 apresenta uma breve conclusão sobre o trabalho.
+    \item E por fim a seção 4 traz as referências bibliográficas.
   \end{itemize}
 
 %% Implementação %%
@@ -53,7 +52,7 @@
 
   \begin{figure}[!htb]
    \centering
-   \includegraphics[scale=0.5]{Artigo}
+   \includegraphics[scale=0.4]{../DiagramadeClassesBurro}
    \caption{Diagrama de Classes}
    \label{Rotulo}
   \end{figure}
@@ -66,8 +65,8 @@
 
   \begin{figure}[!htb]
    \centering
-   \includegraphics[scale=0.5]{DiagramaAtividadesBurro}
-   \caption{Diagrama de Classes}
+   \includegraphics[scale=0.5]{../DiagramaAtividadesBurro}
+   \caption{Diagrama de Atividades}
    \label{Rotulo}
   \end{figure}
 %% ========================================================================================================================
@@ -75,17 +74,23 @@
    \subsection*{2.2. Conceitos OO}
     Foram utilizados para o desenvolvimento do produto final varios conceitos de orientação objeto.
     Dentre eles, foi utilizado o conceito de \textbf{Herança} para especificar a hierarquia de classes envolvendo as classes
-    \textit{Jogador}, \textit{JogadorHumano} e \textit{JogadorBot}, onde a classe jogador contem dados mais gerais que ambos podem
+    \textit{Jogador}, \textit{JogadorHumano} e \textit{JogadorBot} onde Jogador é a super classe da hierarquia tendo como classes filhas as classes
+    JogadorHumano e JogadorBot. \\\\
+    Além de herança foi utiizado também foi utilizado o conceito de \textbf{Polimorfismo}. Esse conceito pode ser identificado na utilização da 
+    sobrescrita do metodo que ``pega'' o nome do jogodar, sendo ele bot ou humano, ai acontece o Polimorfismo, pois nestas classes eles possuem
+    implementações diferentes.\\\\
+    Ainda passando pelos conceitos de OO, foram utilizados conceitos mais gerais em quase todos os pontos do desenvolvimento, como Encapsulamento de
+    metodos, atributos e classes, composição de classes, manipulação de objetos, entre outros conceitos.
 
-   \subsection*{2.3. Calculos e Execução}
-
-%% Testes %%
-\section*{3. Testes}
+   \subsection*{2.3. Execução Jogo}
+    A execução do jogo inicia-se na classe \textit{Main} onde é solicitado o numero de jogadores e seus respectivos nomes, depois uma nova
+    partida começa seguindo as etapas descritas no diagrama de atividades, com algumas coisas bem especificas que estão documentadas no próprio código
 
 %% Conclusão %%
-\section*{4. Conclusão}
+\section*{3. Conclusão}
 
 
 %% Referencias %%
-\section*{5. Referências bibliográficas}
+\section*{4. Referências bibliográficas}
+[3] http://www.devmedia.com.br/visao-geral-da-interface-collection-em-java/25822
 \end{document}
