--- a/doc/TP0doc.tex
+++ b/doc/TP0doc.tex
@@ -52,7 +52,7 @@
 
   \begin{figure}[!htb]
    \centering
-   \includegraphics[scale=0.4]{../DiagramadeClassesBurro}
+   \includegraphics[scale=0.4]{DiagramadeClassesBurro}
    \caption{Diagrama de Classes}
    \label{Rotulo}
   \end{figure}
@@ -65,7 +65,7 @@
 
   \begin{figure}[!htb]
    \centering
-   \includegraphics[scale=0.5]{../DiagramaAtividadesBurro}
+   \includegraphics[scale=0.5]{DiagramaAtividadesBurro}
    \caption{Diagrama de Atividades}
    \label{Rotulo}
   \end{figure}
@@ -76,7 +76,7 @@
     Dentre eles, foi utilizado o conceito de \textbf{Herança} para especificar a hierarquia de classes envolvendo as classes
     \textit{Jogador}, \textit{JogadorHumano} e \textit{JogadorBot} onde Jogador é a super classe da hierarquia tendo como classes filhas as classes
     JogadorHumano e JogadorBot. \\\\
-    Além de herança foi utiizado também foi utilizado o conceito de \textbf{Polimorfismo}. Esse conceito pode ser identificado na utilização da 
+    Além de herança foi utiizado também foi utilizado o conceito de \textbf{Polimorfismo}. Esse conceito pode ser identificado na utilização da
     sobrescrita do metodo que ``pega'' o nome do jogodar, sendo ele bot ou humano, ai acontece o Polimorfismo, pois nestas classes eles possuem
     implementações diferentes.\\\\
     Ainda passando pelos conceitos de OO, foram utilizados conceitos mais gerais em quase todos os pontos do desenvolvimento, como Encapsulamento de
@@ -84,11 +84,21 @@
 
    \subsection*{2.3. Execução Jogo}
     A execução do jogo inicia-se na classe \textit{Main} onde é solicitado o numero de jogadores e seus respectivos nomes, depois uma nova
-    partida começa seguindo as etapas descritas no diagrama de atividades, com algumas coisas bem especificas que estão documentadas no próprio código
+    partida começa seguindo as etapas descritas no diagrama de atividades, com algumas coisas bem especificas que estão documentadas no próprio código.
 
 %% Conclusão %%
 \section*{3. Conclusão}
-
+  Observando tudo o que foi discorrido neste relatório, conclui-se que o resultado obtido com o desenvolvimento do jogo
+  de cartas Burro foi satisfatório apesar da classe \textit{JogadorBot} não ter sido implementada,
+  pois isso não implica em nenhuma alteração no funcionamento do jogo.
+  \\\\
+  No decorrer do desenvolvimento foram encotradas algumas dificuldades, como definir a melhor forma de utilização
+  dos conceitos de orientação objeto, principalmente os conceitos de Herança e Polimorfismo, além de problemas
+  nos tratamentos das exceções sendo essas dificeis de identificar.
+  \\\\
+  No mais, foi um trabalho muito interessante e que deu a oportunidade para a dupla de realmente ver na prática
+  como realizar uma especificação de um produto de software que no futuro será um conhecimento de extrema importância
+  para o decorrer de nossas carreiras profissionais.
 
 %% Referencias %%
 \section*{4. Referências bibliográficas}
